testimonial - on going

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body class="group/body bg-background font-body text-foreground page-loaded">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
-  <script src="./src/assets/js/flickity.pkgd.min.js"></script>
+  <script src="/src/assets/js/flickity.pkgd.min.js"></script>
 </body>
 
 </html>
